--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: NexT
 subtitle:
 description: 未来，已来！
-author: a<sup>1</sup>= σ（Wa<sup>0</sup>+b）
+author: a1= σ（Wa0+b）
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
@@ -373,7 +373,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: a6b59301f5608fb7c93c6e040e468bc0
 
 # Duoshuo ShortName
 #duoshuo_shortname:
