--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: Cloud
 subtitle:
 description: 未来，已来！
 author: a1= σ（Wa0+b）
