--- a/_config.yml
+++ b/_config.yml
@@ -371,7 +371,7 @@ mathjax:
 han: false
 
 # Swiftype Search API Key
-#swiftype_key:
+swiftype_key: 2wn2A7DgLqpD43z6jhFX
 
 # Baidu Analytics ID
 baidu_analytics: a6b59301f5608fb7c93c6e040e468bc0
