--- a/_config.yml
+++ b/_config.yml
@@ -371,7 +371,7 @@ mathjax:
 han: false
 
 # Swiftype Search API Key
-swiftype_key: 2wn2A7DgLqpD43z6jhFX
+#swiftype_key:
 
 # Baidu Analytics ID
 baidu_analytics: a6b59301f5608fb7c93c6e040e468bc0
@@ -561,7 +561,7 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: false
+  enable: true
   # if auto, trigger search by changing input
   # if manual, trigger search by pressing enter key or search button
   trigger: auto
