--- a/_config.yml
+++ b/_config.yml
@@ -30,29 +30,17 @@ author:
   name: GHe
   job_title:
   location:
-  email: wallfacerlogic@outlook.com
+  email: guotao.he.0000@outlook.com
   social_links:
-    - name: facebook
-      url:
     - name: github
-      url: https://github.com/wallfacerlogic
-    - name: instagram
-      url:
-    - name: linkedin
-      url:
-    - name: stackoverflow
-      url:
-    - name: twitter
-      url: 
-    - name: vk
-      url:
+      url: https://github.com/ghe0000
 home:
   section1: <h1>Simple Texture</h1>
   section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
   section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
 blog:
-  cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
-  cc_license_image: /assets/images/theme/cc-by-sa.png # An image of your CC License. 
+  cc_license: http://creativecommons.org/licenses/by-nc/4.0/ # A link to CC License of your choice.
+  cc_license_image: /assets/images/theme/cc-by-nc.png # An image of your CC License. 
   footer_content: A gem-based responsive simple texture styled <a href="http://jekyllrb.com/">Jekyll</a> theme.
 
 disqus:
