--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ sass:
   style: compressed
 
 # Site Data
-url: wallfacerlogic.github.io/Cloud
+url: https://cdn.jsdelivr.net/gh/ghe0000/Cloud
 baseurl: # the subpath of your site, e.g. /blog
 title: Cloud
 description: "GHe's Blog"
