--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ sass:
   style: compressed
 
 # Site Data
-url: https://cdn.jsdelivr.net/gh/ghe0000/Cloud
-baseurl: # the subpath of your site, e.g. /blog
+url: 
+baseurl: https://cdn.jsdelivr.net/gh/ghe0000/Cloud # the subpath of your site, e.g. /blog
 title: Cloud
 description: "GHe's Blog"
 keywords: 'blog'
