--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ sass:
 
 # Site Data
 url: 
-baseurl: 
-# baseurl: https://cdn.jsdelivr.net/gh/ghe0000/Cloud # the subpath of your site, e.g. /blog
+baseurl:
+jsurl: https://cdn.jsdelivr.net/gh/ghe0000/Cloud # the subpath of your site, e.g. /blog
 title: Cloud
 description: "GHe's Blog"
 keywords: 'blog'
