--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ title                    : "Cloud"
 title_separator          : "-"
 name                     : &name "Guotao He"
 description              : &description "personal description"
-url                      : https://ghe0000.github.io/Cloud # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://ghe0000.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/Cloud" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
