--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title                    : "Cloud"
 title_separator          : "-"
 name                     : &name "Guotao He"
 description              : &description "personal description"
-url                      : https://ghe0000.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ghe0000.github.io/Cloud # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/Cloud" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
