--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,16 +12,16 @@ main:
   #- title: "Portfolio"
   #  url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "发布文章"
     url: /year-archive/
     
-  - title: "Categories"
+  - title: "文章分类"
     url: /categories/
 
-  - title: "Book List"
+  - title: "书单"
     url: /booklist/
 
-  - title: "Notes"
+  - title: "笔记分享"
     url: /notes/
 
   #- title: "CV"
