--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,33 +1,34 @@
-# The following is the order of the links in the header of the website.
-#
-# Changing the order here will adjust the order and you can also add additional
-# links. Removing a link prevents it from showing in the header, but does not
-# prevent it from being included in the site.
-#
-# NOTE that only one of the CV options should be selected, the first is for the
-#      Markdown formatted page while the second is generated using JSON.
-
+# main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  #- title: "Talks"
+  #  url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  #- title: "Teaching"
+  #  url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  #- title: "Portfolio"
+  #  url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "发布文章"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "文章分类"
+    url: /categories/
+
+  - title: "书单"
+    url: /booklist/
+
+  - title: "网站收集"
+    url: /website-collection/
+  
+  - title: "笔记分享"
+    url: /notes/
+
+  #- title: "CV"
+  #  url: /cv/
     
-  # - title: "CV"
-  #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
