--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : ""
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Guotao He"
   pronouns         : "he/his"
   bio              : "暂时没想好的介绍"
   location         : "Earth"
