--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Guotao He"
-  pronouns         : "he/his"
+  pronouns         : "he/him"
   bio              : "暂时没想好的介绍"
   location         : "Earth"
   employer         : "Xiamen University"
