--- a/_config.yml
+++ b/_config.yml
@@ -243,6 +243,7 @@ defaults:
       comments: true
       share: false
       related: true
+      toc_sticky: true
   # _pages
   - scope:
       path: ""
