--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Guotao He"
   pronouns         : "he/him"
-  bio              : "暂时没想好的介绍"
+  bio              : ""
   location         : "Earth"
   employer         : "Xiamen University"
   uri              : https://ghe0000.github.io/Cloud/
