--- a/_config.yml
+++ b/_config.yml
@@ -216,18 +216,21 @@ kramdown:
 
 # These settings control the types of collections used by the template
 collections:
-  teaching:
+  thoughts:
     output: true
     permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+  # teaching:
+  #   output: true
+  #   permalink: /:collection/:path/
+  # publications:
+  #   output: true
+  #   permalink: /:collection/:path/
+  # portfolio:
+  #   output: true
+  #   permalink: /:collection/:path/
+  # talks:
+  #   output: true
+  #   permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -251,6 +254,13 @@ defaults:
     values:
       layout: single
       author_profile: true
+  - scope:
+      path: "_thoughts"
+    values:
+      layout: single
+      author_profile: true
+      share: false
+      comments: true
   # # _teaching
   # - scope:
   #     path: ""
