--- a/_config.yml
+++ b/_config.yml
@@ -259,6 +259,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      read_time: true
       share: false
       comments: true
   # # _teaching
